--- a/codebase/front-end/login/login.css
+++ b/codebase/front-end/login/login.css
@@ -138,12 +138,10 @@ body {
 
 /* contact us */
 a {
-    /* Contact us */
-
 
     position:absolute;
-    top:140%;
-    left:33%;
+    bottom: -10%;
+    left:38%;
 
     font-family:'Tajawal', sans-serif;
     font-style: normal;
@@ -154,10 +152,13 @@ a {
 
 img {
     position: absolute;
-    left: 15%;
+    left: 17%;
     top: 10%;
-    max-width: 25%;
-    height:auto;
+
+    max-width: 26vw;
+    max-height: 26vw;
+
+    margin:0;
 
  }
 
