--- a/text-editor-testing/index.css
+++ b/text-editor-testing/index.css
@@ -1,52 +1,44 @@
-html, body, section, .full-height {
-    height: 100%;
-} 
-
-div{
-    font-size: 15px;
+@font-face {
+    font-family:"SF-Pro";
+    src: url("./public/fonts/SF-Pro.ttf");
 }
 
-#textBlock {
-    font-family: monospace;
+html, body, section, .full-height {
+    height: 100%;
+    user-select: all;
+} 
+
+body{
+    margin: 0;
+}
+
+div{
+    font-size: 18px;
+    line-height: 26px;
+}
+#contentWrapper {
     border: none;
     overflow: auto;
     outline: none;
-    resize: none;
-    width: 94%;
-    padding: 3%;
+    padding: 10px;
+    display: block;
 }
 
-#textBlock:empty:before{
-    content: attr(placeholder);
-    color: gray;
+.text-block{
+    background-color: white;
 }
 
-.notesList:empty::before{
-    content: attr(placeholder);
-    color: gray;
+.noteContainer{
+    margin-top: 7px;
+    margin-bottom: 7px;
+    margin-left: 20px;
+    display: list-item;
+    list-style-type: circle;
+    list-style-position: outside;
 }
 
-.notesList{
-    color: black;
-}
-
-.header1{
-    font-size: 42px;
-    font-weight: bold;
-    color: black;
-}
-
-.header2{
-    font-size: 24px;
-    font-weight: bold;
-    color: black;
-}
-
-
-.row {
-    display: flex;
-    flex-direction: row;
-}
+/*
+.noteContainer:before{content: '\f081';} */
 
 #markdown {
     overflow: auto;
