Added WebComponents to dailylog and futurelog under new files named newdailylog and newfuturelog

--- a/codebase/front-end/weeklylog.css
+++ b/codebase/front-end/weeklylog.css
@@ -61,6 +61,14 @@ ul {
 	width : 5px;
 	height: 5px
   }
+
+  .input-group{
+    display: flex;
+    align-items : center;
+	overflow: hidden;
+	float: right;
+	clear: both;
+}
   
   .right {
 	transform: rotate(-45deg);
