--- a/codebase/front-end/components/header.html
+++ b/codebase/front-end/components/header.html
@@ -62,9 +62,9 @@
 		}
 
 		.search_bar {
-			margin-top: 5px;
-			margin-right: 10px;
-			height: 45px;
+			margin-top: 15px;
+			margin-right: 0;
+			height: 30px;
 			border-radius: 5px;
 			border-color: rgba(0, 0, 0, 0.1);
 			border-width: 2px;
@@ -73,7 +73,7 @@
 		}
 
 		.search_bar img {
-			display: inline;
+			display: inline-block;
 		
 			opacity: 50%;
 
@@ -85,19 +85,21 @@
 			position: relative;
 			top: 0;
 			right: 15px;
+			margin-left: 10px;
 		}
 
 		.search_bar input{
 			/* TODO: hard coded */
-			margin-top: 2px;
-			font-size: 16pt;
+			margin-top: -6px;
+			background-color: rgba(0, 0, 0, 0);
+			font-size: 14pt;
 			opacity: 90%;
 			height: 35px;
 			text-align: left;
 			width: 400px;
 			border: solid;
 			border-radius: 5px;
-			margin-left: 15px;
+			margin-left: 10px;
 			border-color: rgba(0, 0, 0, 0);
 			outline: none;
 		}
