--- a/codebase/front-end/index.css
+++ b/codebase/front-end/index.css
@@ -25,8 +25,10 @@ div{
     border: none;
     overflow: auto;
     outline: none;
-    padding: 10px;
     display: block;
+	margin-top: 20px;
+	margin-left: 80px;
+	margin-right: 20px;
 }
 
 .container-fluid {
