Dropdown implementation and editor loading
Co-authored-by: Thomas Fischer <tjfischer86@users.noreply.github.com>
Co-authored-by: Carlos Guerrero <cguerrer4612@users.noreply.github.com>

--- a/codebase/front-end/components/block.html
+++ b/codebase/front-end/components/block.html
@@ -47,5 +47,5 @@
 			margin: 8px 0 13px;
 		}
 	</style>
-	<div id="textBlock" contenteditable="true" placeholder='Type "/" to create a block'></div>
+	<div id="textBlock" contenteditable="true"  ondrop="return false;" placeholder='Type "/" to create a block'></div>
 </template>
