--- a/codebase/front-end/newdailylog.css
+++ b/codebase/front-end/newdailylog.css
@@ -11,6 +11,7 @@ body {
     overflow: hidden;
 }
 
+
 #wrapper {
 	width: 100%;
 	float: left;
@@ -51,7 +52,7 @@ ul {
 	margin-right: 40px;
 	margin-top: 25px;
 }
-.arrow {
+/* .arrow {
 	
 	border: solid black;
 	border-width: 0 3px 3px 0;
@@ -59,7 +60,7 @@ ul {
 	padding: 3px;
 	width : 5px;
 	height: 5px
-  }
+  } */
   
   .right {
 	transform: rotate(-45deg);
@@ -141,7 +142,7 @@ ul {
 		margin-right: 40px;
 		margin-top: 25px;
 	}
-	.arrow {
+/* 	.arrow {
 		
 		border: solid black;
 		border-width: 0 3px 3px 0;
@@ -149,7 +150,7 @@ ul {
 		padding: 3px;
 		width : 5px;
 		height: 5px
-	  }
+	  } */
 	  
 	  .right {
 		transform: rotate(-45deg);
