--- a/codebase/front-end/index.css
+++ b/codebase/front-end/index.css
@@ -15,6 +15,8 @@ html, body, section, .full-height {
 body{
     margin: 0;
 	overflow: auto;
+	position: relative;
+	z-index: -2;
 }
 
 div{
@@ -26,9 +28,11 @@ div{
     overflow: auto;
     outline: none;
     display: block;
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-left: 80px;
 	margin-right: 20px;
+	position: relative;
+	z-index: -1;
 }
 
 .container-fluid {
@@ -67,17 +71,61 @@ div{
 	vertical-align: middle;
 	border-bottom: solid 2px rgba(0, 0, 0, 0.05);
 	height: 60px;
+	text-align: left;
+}
+
+@media only screen and (max-width:900px) {
+	#topbar{
+		margin-left: 20px;
+		text-align: center;
+	}
+
+	#contentWrapper{
+		margin-left: 20px;
+	}
+}
+
+/* Fade-in buttons */
+#targetMenu{
+	display: none;
 }
 
 
-/* Fade-in buttons */
-
-
-
+@media only screen and (max-width:900px) {
+	#targetMenu{
+		display: block;
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		width: 60px;
+		height: 60px;
+		border-radius: 80px;
+		border: 1px solid transparent;
+		box-shadow: 1px 5px 10px 5px rgba(0, 0, 0, 0.1);
+		background-image: url(./public/resources/target_icon.png);
+		background-size: 35px;
+		background-repeat: no-repeat;
+		background-position-x: 14px;
+		background-position-y: 7px;
+		background-color: transparent;
+		cursor: pointer;
+		opacity: 0.7;
+		-webkit-font-smoothing: antialiased;
+		background-blend-mode: multiply;
+		transition: 0.2s;
+	}
+	
+	#targetMenu:hover{
+		opacity: 1;
+		transition: 0.2s;
+	}
+}
 
 /* Side navigation */
 #sidebar {
 	overflow: hidden;
+	position: relative;
+	z-index: 1;
 }
 
 .sidebar button {
