--- a/codebase/front-end/components/block.html
+++ b/codebase/front-end/components/block.html
@@ -10,7 +10,6 @@
 			overflow: auto;
 			outline: none;
 			resize: none;
-			width: 94%;   
 			display: inline-block;
 		}
 
@@ -23,6 +22,7 @@
 			margin: 7px 0 12px;
 			font-size: 18px;
 			line-height: 28px;
+			width: calc(100% - 44px);
 		}
 
 		.note{
@@ -32,12 +32,14 @@
 			font-size: 18px;
 			line-height: 28px;
 			vertical-align: top;
+			width: calc(100% - 70px);
 		}
 
 		.task{
 			margin: 7px 0 2px;
 			font-size: 18px;
 			line-height: 28px;
+			width: calc(100% - 70px);
 		}
 
 		.header1{
@@ -45,6 +47,7 @@
 			line-height: 50px;
 			font-weight: bold;
 			margin: 15px 0 20px;
+			width: calc(100% - 44px);
 		}
 
 		.header2{
@@ -52,6 +55,7 @@
 			line-height: 36px;
 			font-weight: bold;
 			margin: 8px 0 13px;
+			width: calc(100% - 44px);
 		}
 
 		.header3{
@@ -59,6 +63,7 @@
 			line-height: 30px;
 			font-weight: bold;
 			margin: 7px 0 10px;
+			width: calc(100% - 44px);
 		}
 
 		.bold{
@@ -152,8 +157,8 @@
 
 		#checkerContainer[checked="checked"] #taskChecker{
 			background-color: #218be2;
-			border: 1px solid #adb8c0;
-			box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+			border: 1px solid #218be2;
+			box-shadow: 0 1px 2px rgba(0, 87, 168, 0.05);
 			color: #218be2;
 		}
 
