Use css variables in components

--- a/codebase/front-end/components/block.html
+++ b/codebase/front-end/components/block.html
@@ -93,6 +93,7 @@
 			margin-right: 7px;
 			height: 15px;
 			cursor: pointer;
+			filter: var(--icon-filter);
 		}
 
 		.unfocusedIcons{
@@ -107,7 +108,7 @@
 
 		#editorIcons img:hover{
 			opacity: 0.8;
-			transition: 0.2s;
+			transition: opacity 0.2s;
 		}
 		
 		.header1Icons{
