--- a/codebase/front-end/index.css
+++ b/codebase/front-end/index.css
@@ -73,7 +73,7 @@ page-header {
     display: block;
     margin-left: 80px;
     margin-right: 20px;
-    border-bottom: solid 2px rgba(0, 0, 0, 0.05);
+    border-bottom: solid 2px var(--border-color); /*rgba(0, 0, 0, 0.05);*/
 	text-align: left;
 }
 
