--- a/codebase/front-end/theme.css
+++ b/codebase/front-end/theme.css
@@ -1,4 +1,9 @@
 
+/* Default color theme values.
+ * Please use var() with the appropriate variable in web components.
+ * For example:
+ *      border: 2px solid var(--border-color);
+ */
 :root {
     --border-color: #F2F2F2;
 
@@ -8,7 +13,7 @@
     --tracker-background-color: #2B2D42;
     --tracker-foreground-color: #FFFFFF;
 
-    --navbar-background-color: #F7F2EC; /*ecdfcf66;*/
+    --navbar-background-color: #F7F2EC;
     --navbar-foreground-color: #FFFFFF;
 
     --icon-filter: ;
