Fix codefactor issues

--- a/codebase/front-end/index.css
+++ b/codebase/front-end/index.css
@@ -126,7 +126,7 @@ nav-bar {
 .sidebar button {
     display: block;
     color: #818181;
-    padding: 10px 0px;
+    padding: 10px 0;
     margin: 10px auto;
 }
 
