--- a/codebase/front-end/components/block.html
+++ b/codebase/front-end/components/block.html
@@ -142,7 +142,7 @@
 			display: inline-block;
 			background-color: #fafafa;
 			border: 1px solid #cacece;
-			box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+			box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0,0,0,0.05);
 			width: 18px;
 			height: 18px;
 			margin-top: 11px;
@@ -153,7 +153,7 @@
 		}
 
 		#taskChecker:active, #checkerContainer[checked="checked"]:active #taskChecker{
-			box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+			box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0 1px 3px rgba(0,0,0,0.1);
 		}
 
 		#checkerContainer[checked="checked"] #taskChecker{
