--- a/codebase/front-end/theme.css
+++ b/codebase/front-end/theme.css
@@ -12,6 +12,7 @@
 
     --tracker-background-color: #2B2D42;
     --tracker-foreground-color: #FFFFFF;
+    --tracker-border-color:     #7671B6;
 
     --navbar-background-color: #F7F2EC;
     --navbar-foreground-color: #FFFFFF;
