Initialize settings in index.js for now

--- a/codebase/front-end/theme.css
+++ b/codebase/front-end/theme.css
@@ -12,10 +12,12 @@
 
     --tracker-background-color: #2B2D42;
     --tracker-foreground-color: #FFFFFF;
-    --tracker-border-color:     #7671B6;
+    --tracker-border-color:     #48486f;
 
     --navbar-background-color: #F7F2EC;
     --navbar-foreground-color: #FFFFFF;
+
+    --settings-hover-color: #F0E7DB;
 
     --icon-filter: ;
 
