Commented database functions and made signifiers
Co-authored-by: Carlos Guerrero <cguerrer4612@users.noreply.github.com>

--- a/codebase/front-end/components/block.html
+++ b/codebase/front-end/components/block.html
@@ -27,24 +27,26 @@
 			margin: 7px 0 12px;
 			font-size: 18px;
 			line-height: 28px;
-			width: calc(100% - 44px);
+			width: calc(100% - 74px);
 		}
 
 		.note{
+					
+				
 			margin: 0;
-			margin-left: -40px;
+			margin-left: -62px;
 			position: relative;
 			font-size: 18px;
 			line-height: 28px;
 			vertical-align: top;
-			width: calc(100% - 70px);
+			width: calc(100% - 95px);
 		}
 
 		.task{
 			margin: 7px 0 2px;
 			font-size: 18px;
 			line-height: 28px;
-			width: calc(100% - 71px);
+			width: calc(100% - 96px);
 		}
 
 		.header1{
@@ -52,7 +54,7 @@
 			line-height: 50px;
 			font-weight: bold;
 			margin: 15px 0 20px;
-			width: calc(100% - 44px);
+			width: calc(100% - 74px);
 		}
 
 		.header2{
@@ -60,7 +62,7 @@
 			line-height: 36px;
 			font-weight: bold;
 			margin: 8px 0 13px;
-			width: calc(100% - 44px);
+			width: calc(100% - 74px);
 		}
 
 		.header3{
@@ -68,7 +70,7 @@
 			line-height: 30px;
 			font-weight: bold;
 			margin: 7px 0 10px;
-			width: calc(100% - 44px);
+			width: calc(100% - 74px);
 		}
 
 		.bold{
@@ -101,13 +103,21 @@
 			filter: var(--icon-filter);
 		}
 
+		#editorIcons div{
+			display: inline;
+			margin-right: 0;
+			opacity: 1;
+			width: 20px;
+			cursor: pointer;
+		}
+
 		.unfocusedIcons{
 			opacity: 0.3;
 			transition: 0.2s;
 		}
 
 		.focusedIcons{
-			opacity: 0.7;
+			opacity: 0.5;
 			transition: 0.2s;
 		}
 
@@ -131,7 +141,7 @@
 		.noteIcons{
 			position: relative;
 			top: 2px;
-			left: -65px;
+			left: -87px;
 		}
 
 		.paragraphIcons{
@@ -179,8 +189,12 @@
 			color: #fff;
 		}
 
+		#signifier{
+			opacity: 1;
+		}
+
 	</style>
-	<div id="editorIcons" class="paragraphIcons"><img src="../public/resources/plusIcon.png" class="unfocusedIcons"/><img src="../public/resources/sixDotIcon.png" class="unfocusedIcons"/></div>
+	<div id="editorIcons" class="paragraphIcons"><img src="../public/resources/plusIcon.png" class="unfocusedIcons"/><img src="../public/resources/sixDotIcon.png" class="unfocusedIcons"/><div id="signifier"></div></div>
 	<div id="checkerContainer" checked=""><div id="taskChecker"></div></div>
 	<div id="textBlock" contenteditable="true" ondrop="return false;" placeholder='Type "/" to create a block'></div>
 </template>
