--- a/codebase/front-end/templates/test.html
+++ b/codebase/front-end/templates/test.html
@@ -1,8 +1,5 @@
 <html>
 	<head>
-		<link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Satisfy&family=Source+Sans+Pro:wght@300&family=Tajawal:wght@300&display=swap" rel="stylesheet">
-
 		<style>
 			@font-face {
 				font-family:"SF-Pro";
@@ -11,33 +8,81 @@
 			:host {
                     font-family: "SF-Pro";
             }
+			
+			/* The Popup background */
+			.popup {
 
-			form {
-				margin:10px auto;
 				font-family:'SF-Pro';
-				padding: 20px 40px;
-				position: relative;
-				box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.15);
 				background: white;
-				height:60vh;
-				width:40vw;
-				top:auto;
-				left:auto;
+				display: none; /* Hidden by default */
+				position: fixed; /* Stay in place */
+				z-index: 1; /* Sit on top */
+				padding-top: 100px; /* Location of the box */
+				left: 0;
+				top: 0;
+				width: 100%; /* Full width */
+				height: 100%; /* Full height */
+				overflow: auto; /* Enable scroll if needed */
+				background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 			}
 
+			/* Pop up  window */
+			.popup-content {
+				background-color: #fefefe;
+				margin: auto;
+				position: fixed;
+				border: 1px solid #888;
+				width: 40%;
+				height: 70%;
+				left: 30vw;
+			}
+
+			/* The Close Button */
+			.close {
+				color: #aaaaaa;
+				float: right;
+				font-size: 3vw;
+				font-weight: bold;
+				position: absolute;
+				right: 2vw;
+				top: 2vh;
+				
+			}
+
+			.close:hover,
+			.close:focus {
+				color: #000;
+				text-decoration: none;
+				cursor: pointer;
+			}
+
+			/* Set Label For each log*/
 			label[for=month],label[for=future],label[for=daily] {
 				font-size: 3vw;
 				white-space: nowrap;
-				position: relative;
+				position: absolute;
 				text-align: center;	
-				left:30%;			
+				font-weight: 1000;
+				left:7.8vw;	
+				top:5vh;	
+			}
+
+			/* Monthly Log Start */
+			label[for=pick-month] {
+				font-size: 2vw;
+				white-space: nowrap;
+				position: absolute;
+				text-align: center;	
+				left:7.5vw;	
+				top: 23vh;	
+				font-weight: 400;
 			}
 
 			input[type=month] {
-				position: relative;
-				top: 10%;
-				left:16%;
-				width:20vw;
+				position: absolute;
+				top: 33vh;
+				left:7.5vw;
+				width:25vw;
 				height: 5vh;
 				padding-left: 20px;
 			}
@@ -53,104 +98,161 @@
 				cursor: pointer;
 				position: absolute;
 				bottom:10%;				
-				left:40%;
-			}
-
-			textarea {
-				position: absolute;
-				left:15%;
+				left:16vw;
 			}
 			
-			/* The Modal (background) */
-			.modal {
-				display: none; /* Hidden by default */
-				position: fixed; /* Stay in place */
-				z-index: 1; /* Sit on top */
-				padding-top: 100px; /* Location of the box */
-				left: 0;
-				top: 0;
-				width: 100%; /* Full width */
-				height: 100%; /* Full height */
-				overflow: auto; /* Enable scroll if needed */
-				background-color: rgb(0,0,0); /* Fallback color */
-				background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+			form.monthly {
+				display:none;
 			}
 
-			/* Modal Content */
-			.modal-content {
-				background-color: #fefefe;
-				margin: auto;
-				padding: 20px;
-				border: 1px solid #888;
-				width: 80%;
+			/* Monthly Log End */
+
+
+			/* Future Log Start */
+			label[for=future-from] {
+				font-size: 2vw;
+				white-space: nowrap;
+				position: absolute;
+				text-align: center;	
+				left:7.5vw;	
+				top: 18vh;	
+				font-weight: 400;
 			}
 
-			/* The Close Button */
-			.close {
-				color: #aaaaaa;
-				float: right;
-				font-size: 28px;
-				font-weight: bold;
+			label[for=future-to] {
+				font-size: 2vw;
+				white-space: nowrap;
+				position: absolute;
+				text-align: center;	
+				left:7.5vw;	
+				top: 34vh;	
+				font-weight: 400;
+			}
+	
+			input[name=future-from] {
+				position: absolute;
+				top: 25vh;
+				left:7.5vw;
+				width:25vw;
+				height: 5vh;
+				padding-left: 20px;
 			}
 
-			.close:hover,
-			.close:focus {
-				color: #000;
-				text-decoration: none;
-				cursor: pointer;
+			input[name=future-to] {
+				position: absolute;
+				top: 41vh;
+				left:7.5vw;
+				width:25vw;
+				height: 5vh;
+				padding-left: 20px;
 			}
+
+			form.future {
+				display:none;
+			}
+
+			/* Future Log End */
+
+			/* Daily Log Start */
+
+
+
+			/* Daily Log End */
+			label[for=daily-title] {
+				font-size: 2vw;
+				white-space: nowrap;
+				position: absolute;
+				text-align: center;	
+				left:7.5vw;	
+				top: 23vh;	
+				font-weight: 400;
+			}
+
+			input[name=daily] {
+				position: absolute;
+				top: 33vh;
+				left:7.5vw;
+				width:25vw;
+				height: 5vh;
+				padding-left: 20px;
+			}
+			
+
+
 		</style>
 
 	</head>
 
 	<body>	
 		
-		<button id="myBtn">Open Modal</button>
+		<button id="myBtn">Open Monthly</button>
 
 		<!-- The Modal -->
-		<div id="myModal" class="modal">
+		<div id="popup" class="popup">
 
   		<!-- Modal content -->
-			<div class="modal-content">
+			<div class="popup-content">
 				<span class="close">&times;</span>
-				<p>Some text in the Modal..</p>
+
+				<!-- Monthly Log -->
 				<form class="monthly">
-					<label for="month">Monthly Log </label>
+					<label for="month">New Monthly Log </label>
 					<br><br>
-		
-					<input type="month" id="month" name="month">
+					<label for="pick-month"> Pick a Month:</label>
+					<input type="month" id="monthly" name="monthly">
 					<br><br>
 					<input type="submit" value="Create"> 
 				</form>
+
+				<!-- Future Log -->
+				<form class="future">
+					<label for="month">New Future Log </label>
+					<br><br>
+					<label for="future-from"> From:</label>
+					<input type="date" id="future-from" name="future-from">
+					<br><br>
+					<label for="future-to"> To:</label>
+					<input type="date" id="future-to" name="future-to">
+					<input type="submit" value="Create"> 
+				</form>
+
+				<!-- Daily Log -->
+				<form class="daily">
+					<label for="daily">New Daily Log </label>
+					<br><br>
+					<label for="daily-title">Title:</label><br><br>
+					<input type="text" id="daily" name="daily">
+					<input type="submit" value="Create"> 
+				  </form>
 			</div>
 
 		</div>
 
 
 		<script>
-			// Get the modal
-			var modal = document.getElementById("myModal");
+			// Get the popup
+			var popup = document.getElementById("popup");
 			
-			// Get the button that opens the modal
+			// Get the button that opens the popup
 			var btn = document.getElementById("myBtn");
 			
-			// Get the <span> element that closes the modal
+			// Get the <span> element that closes the popup
 			var span = document.getElementsByClassName("close")[0];
 			
-			// When the user clicks the button, open the modal 
+			// When the user clicks the button, open the popup 
 			btn.onclick = function() {
-			  modal.style.display = "block";
+				popup.style.display = "block";
 			}
 			
-			// When the user clicks on <span> (x), close the modal
+			// When the user clicks on <span> (x), close the popup
 			span.onclick = function() {
-			  modal.style.display = "none";
+				popup.style.display = "none";
 			}
 			
-			// When the user clicks anywhere outside of the modal, close it
+			// When the user clicks anywhere outside of the popup, close it
 			window.onclick = function(event) {
-			  if (event.target == modal) {
-				modal.style.display = "none";
+			  if (event.target == popup) {
+				popup.style.display = "none";
 			  }
 			}
 		</script>
