Linting errors fixed and linting script done

--- a/src/front-end/components/block.html
+++ b/src/front-end/components/block.html
@@ -194,5 +194,5 @@
 	</style>
 	<div id="editorIcons" class="paragraphIcons"><img src="../public/resources/plusIcon.png" class="unfocusedIcons"/><img src="../public/resources/sixDotIcon.png" class="unfocusedIcons"/><div id="signifier"></div></div>
 	<div id="checkerContainer" checked=""><div id="taskChecker"></div></div>
-	<div id="textBlock" contenteditable="true" ondrop="return false;" placeholder='Type "/" to create a block'></div>
+	<div id="textBlock" contenteditable="true" ondrop="() => {return false;}" placeholder='Type "/" to create a block'></div>
 </template>
