--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -11,13 +11,17 @@
     display: flex;
     align-items: center;
     height: 75px;
-    border-bottom: solid 2px var(--border-color);
 }
 
 .header {
     font-family: "SF-Pro";
     position: relative;
+    height: 56px;
+    display: flex;
+    align-items: center;
     flex: 2;/* Use half of the space for the title */
+    border-bottom: solid 2px var(--border-color);
+    justify-content: space-between;
 }
 
 button {
@@ -28,11 +32,12 @@ button {
     display: inline;
 }
 
-button.plus {
-    display: inline-block;
-    width: 23px;
-    height: 23px;
-    margin-right: 0;
+ .new-button {
+    color:white;
+    background-color: #04a8c5;
+    border: 4px solid #04a8c5 ;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
 .imgbutton {
