front-end/index.js: index and its css files have been changed to accomodate the new navbar

--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -1,14 +1,17 @@
 :host {
     font-family: "SF-Pro";
     display: block;
-    margin-left: 80px;
+    margin-left: 240px;
     margin-right: 20px;
+    margin-top: 25px;
     text-align: left;
 }
 
 /* Top navigation */
 #container {
     display: flex;
+    width: flex;
+    object-position: 10%;
     align-items: center;
     height: 75px;
     border-bottom: solid 2px var(--border-color);
