--- a/src/front-end/components/navbar.css
+++ b/src/front-end/components/navbar.css
@@ -14,6 +14,17 @@
     background-color: var(--navbar-background-color);
 }
 
+.collapsed-nav {
+    position: fixed;
+    width: 40px;
+    height: 100%;
+    margin-top: 10px;
+    margin-left: 10px;
+    display: block;
+
+    background-color: transparent;
+}
+
 button {
     display: block;
     background-color: transparent;
@@ -86,10 +97,24 @@ button:hover h1 {
 }
 
 #top {
-    margin-bottom: 55px;
+    margin-bottom: -10px;
     margin-top: 10px;
+    margin-left: 30px;
 }
 
+#home {
+    width: 150px;
+    display: inline-block;
+}
+
+#collapse {
+    width: 30px;
+    display: inline-block;
+}
+
+#collapseImage {
+    height: 75%;
+}
 
 #user {
     position: static;
@@ -102,6 +127,33 @@ button:hover h1 {
     height: 22px;
     margin-bottom: 20px;
 }
+
+#mainNav.closed {
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#mainNav.open {
+    transform-origin: 0 0;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+/* #closedNav {
+    display: none;
+} */
+
+#closedNav.closed {
+    /* display: none; */
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#closedNav.open {
+    /* display: block; */
+    transform-origin: 0 0;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
 
 @media only screen and (max-width:1100px) {
     #menu {
