--- a/src/front-end/components/itemCard.css
+++ b/src/front-end/components/itemCard.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     padding: 0 0 1rem;
     min-width: 12vw;
-    background-color: #ffffff;
+    background-color: #F9F7F3FF;
     
     box-shadow: 0 0 10px grey;
 }
@@ -40,8 +40,8 @@ button{
     border-radius: 6px;
 }
 #openButton{
-    background-color: #33b5e5;
+    background-color: #33B5E5FF;
 }
 #peakButton{
-    background-color:#ffbb33;
+    background-color:#FFBB33FF;
 }
