--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -166,6 +166,7 @@ h1 {
     :host {
         margin-left: 20px;
         padding-top: 10px;
+        margin-top: 0px;
     }
 
     .search_bar {
@@ -215,7 +216,7 @@ h1 {
         flex-direction: column;
         left: 20px;
         padding-top: 5px;
-        z-index: 1;
+        /* z-index: 1; */
     }
 
     #menuToggle input {
@@ -239,7 +240,7 @@ h1 {
         position: relative;
         border-radius: 3px;
         background: var(--content-foreground-color);
-        z-index: 1;
+        /* z-index: 1; */
         transform-origin: 5px 0px;
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                     background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
