--- a/src/front-end/components/sideCard.css
+++ b/src/front-end/components/sideCard.css
@@ -9,13 +9,18 @@
     justify-content: space-between;
     padding: 0 0 1rem;
     min-width: 12vw;
+    max-width: 24vw;
     background-color: #FCFCFCCC;
     
     box-shadow: 0 0 10px #00000040;
+    margin-top: 0.5vw;
+    margin-bottom: 0.5vw;
+    margin-left:1vw;
 }
 #titleWrapper{
-    padding-left: 3vw;
-    padding-right: 3vw;
+    padding-top: 1vw;
+    padding-left: 2.5vw;
+    padding-right: 2vw;
 }
 #title{
     font-size: 18pt;
@@ -23,16 +28,17 @@
     text-decoration: underline;
 }
 #trackerWrapper{
-    padding-left: 3vw;
-    padding-right: 3vw;
+    padding-left: 2.5vw;
+    padding-right: 2vw;
+    padding-bottom: 1vw;
 }
 #titleblock > * {
-    vertical-align:middle;  // Align children to middle of line
+    vertical-align:middle; 
 }
 
 #editorIcons{
     display: inline-block;
-
+    margin-left: 1.5vw;
 }
 #editorIcon{
 	display: inline-block;
@@ -40,7 +46,6 @@
 }
 
 #editorIcons img{
-	margin-right: 7px;
 	height: 15px;
 	cursor: pointer;
 	filter: var(--icon-filter);
