frontend/itemcard: fixed item card css

--- a/src/front-end/components/itemCard.css
+++ b/src/front-end/components/itemCard.css
@@ -2,7 +2,7 @@
 	font-family:"SF-Pro";
 }
 .card{
-    font: "SF-Pro";
+    font-family: "SF-Pro";
     display: inline-block;
     overflow: hidden;
     border-radius: 15px;
